// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MathEquation Converter oboToSlate converts an OboNode to a Slate node 1`] = `
Object {
  "children": Array [
    Object {
      "text": "",
    },
  ],
  "content": Object {},
  "id": "mockKey",
  "type": "mockType",
}
`;

exports[`MathEquation Converter oboToSlate converts an OboNode to a Slate node with content 1`] = `
Object {
  "children": Array [
    Object {
      "text": "",
    },
  ],
  "content": Object {
    "latex": "y=2x",
    "triggers": "mock-triggers",
  },
  "id": "mockKey",
  "type": "mockType",
}
`;

exports[`MathEquation Converter slateToObo converts a Slate node to an OboNode with content 1`] = `
Object {
  "children": Array [],
  "content": Object {},
  "id": undefined,
  "type": "mockType",
}
`;
